--- a/ps-extension/styles.css
+++ b/ps-extension/styles.css
@@ -250,8 +250,9 @@
     align-items: center;
     display:flex;
     justify-content: center;
-    flex:0 0 500px;
+    flex:0 0 320px;
     margin-right:16px;
+    padding-bottom: 4px;
     position:relative;
 }
 
