--- a/ps-extension/styles.css
+++ b/ps-extension/styles.css
@@ -75,7 +75,7 @@
 .ps_header {
     background:#222;
     border-bottom:solid 4px #363636;
-    height:64px;
+    height:68px;
     font-family:'Gotham SSm A','Gotham SSm B','Helvetica Neue','Helvetica','Roboto',Arial,sans-serif;
     left:50%;
     min-width:1000px;
@@ -85,6 +85,9 @@
     transform:translateX(-50%);
     width:100%;
     z-index:999;
+    -webkit-box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.75);
 }
 
 .ps_header svg {
@@ -170,6 +173,7 @@
 .ps_header--branding a {
     display:block;
     padding:16px 24px;
+    height: 64px;
 }
 
 .ps_header--branding a svg {
@@ -183,7 +187,7 @@
 
 .ps_header--browse {
     margin-bottom:-4px;
-    margin-right:20px;
+    margin-right:12px;
     position:relative;
 }
 
@@ -194,8 +198,8 @@
     display: flex;
     flex:0 0 110px;
     flex-wrap: nowrap;
-    height:60px;
-    padding:0 16px;
+    height:64px;
+    padding:0 24px;
     transition: all 0.3s ease;
 }
 
@@ -215,7 +219,7 @@
 .ps_header--graident {
     background: linear-gradient(to right, rgb(240, 90, 40), rgb(232, 10, 137));
     position:absolute;
-    bottom:2px;
+    bottom:-1px;
     left:0;
     opacity:0;
     right:0;
@@ -236,7 +240,7 @@
     font-size:18px;
     font-weight: 500;
     line-height: 24px;
-    margin-left:16px;
+    margin-left:12px;
     vertical-align:4px
 }
 
@@ -250,7 +254,7 @@
     align-items: center;
     display:flex;
     justify-content: center;
-    flex:0 0 320px;
+    flex:1 1 0;
     margin-right:16px;
     padding-bottom: 4px;
     position:relative;
@@ -277,6 +281,7 @@
     text-indent:52px;
     outline:none;
     width:100%;
+    /* border: solid 1px #555555; */
 }
 
 .ps_header--search input[type="submit"] {
@@ -364,7 +369,7 @@
 .ps_header--channels a,
 .ps_header--notifications a {
     display:block;
-    padding:15px 0;
+    padding:18px 0;
     transition: all 0.3s ease;
 }
 
@@ -422,7 +427,10 @@
 
 .ps_header--menu {
     background:#fff;
-    border:solid 1px #AAA;
+    /* border:solid 1px #AAA; */
+    -webkit-box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.75);
     border-radius:2px;
     display:none;
     position:absolute;
@@ -433,6 +441,7 @@
 .ps_header--menu a {
     color:#555;
     font-size:14px;
+    font-weight: 400;
     line-height:40px;
     margin:0;
     padding:0 24px;
